Added a progress-option to cp.
Now that we can get the size of any opened file, we can also
show the progress when e.g. copying a file from HTTP :)

--- a/source/user/cp/SConscript
+++ b/source/user/cp/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('bin', target = 'cp', source = env.Glob('*.c'))
+env.EscapeCXXProg('bin', target = 'cp', source = env.Glob('*.cc'))
