Enable networking in bochs-hd and use sync=slowdown in bochs.

--- a/source/boot/i586/bochs.cfg
+++ b/source/boot/i586/bochs.cfg
@@ -18,6 +18,7 @@ com1: enabled=1, mode=file, dev="log.txt"
 keyboard: type=mf, keymap=/usr/local/share/bochs/keymaps/x11-pc-de.map
 mouse: type=imps2, enabled=0
 port_e9_hack: enabled=1
+clock: sync=slowdown
 
 vgaromimage: file="/usr/local/share/bochs/VGABIOS-lgpl-latest"
 vga: extension=vbe, update_freq=60
