Clean up startup.
Now we don't use the gdt-trick anymore, but setup paging right
away so that we don't need to deal with different "environments"
in the C++ code.
Additionally, we don't use the external trampoline anymore. Now
it's integrated into the kernel.S, so that we don't need nasm
anymore and can use common code easier.
I've also moved the memory-layout constants to mem/layout.h,
which enables us to include it in assembly files.

--- a/source/kernel/src/arch/i586/ld.conf
+++ b/source/kernel/src/arch/i586/ld.conf
@@ -1,5 +1,5 @@
 OUTPUT_FORMAT("elf32-i386")
-ENTRY(loader)
+ENTRY(bspEntry)
 
 PHDRS
 {
@@ -19,25 +19,25 @@ SECTIONS
 	} : init
 
 	. += 0xC0000000;
-	
+
 	.text : AT(ADDR(.text) - 0xC0000000)
 	{
 		_btext = .;
 		*(.text*)
 	} : text
-	
+
 	.rodata : AT(ADDR(.rodata) - 0xC0000000)
 	{
 		*(.rodata*)
 	} : text
-	
+
     .init_array : AT (ADDR (.init_array) - 0xC0000000)
     {
         PROVIDE (CTORS_BEGIN = .);
         KEEP (*(.init_array .ctors))
         PROVIDE (CTORS_END = .);
     } : data
-	
+
 	.data ALIGN (4096) : AT(ADDR(.data) - 0xC0000000)
 	{
 		*(.data)
