Made interrupts/idt more generic.

--- a/source/kernel/SConscript
+++ b/source/kernel/SConscript
@@ -33,7 +33,7 @@ src += [f for f in kenv.Glob('src/*/*/*.c') if 'arch/' not in str(f)]
 src += [f for f in kenv.Glob('src/*/*/*.cc') if 'arch/' not in str(f)]
 src += [kenv.Glob('src/arch/$TGT/*.cc')]
 src += [kenv.Glob('src/arch/$TGT/*/*.cc'), kenv.Glob('src/arch/$TGT/*/*/*.cc')]
-src += [kenv.Glob('src/arch/$TGTTYPE/*.cc')]
+src += [kenv.Glob('src/arch/$TGTTYPE/*.cc'), kenv.Glob('src/arch/$TGTTYPE/*.S')]
 src += [kenv.Glob('src/arch/$TGTTYPE/*/*.cc'), kenv.Glob('src/arch/$TGTTYPE/*/*/*.cc')]
 src += [kenv.Glob('src/basic/arch/$TGT/*.c'), kenv.Glob('src/basic/arch/$TGTTYPE/*.c')]
 src += [kenv.Glob('src/basic/arch/$TGT/*.S')]
