--- a/source/kernel/src/arch/x86/ld.conf
+++ b/source/kernel/src/arch/x86/ld.conf
@@ -1,4 +1,6 @@
+#include <sys/arch/i586/mem/layout.h>
 OUTPUT_FORMAT("elf32-i386")
+
 ENTRY(bspEntry)
 
 PHDRS
@@ -16,35 +18,36 @@ SECTIONS
 	.init :
 	{
 		*(.init)
-	} : init
+		*(.initdata)
+	} : init = 0x90909090
 
-	. += 0xC0000000;
+	. += KERNEL_BEGIN;
 
-	.text : AT(ADDR(.text) - 0xC0000000)
+	.text : AT(ADDR(.text) - KERNEL_BEGIN)
 	{
 		_btext = .;
 		*(.text*)
-	} : text
+	} : text = 0x90909090
 
-	.rodata : AT(ADDR(.rodata) - 0xC0000000)
+	.rodata : AT(ADDR(.rodata) - KERNEL_BEGIN)
 	{
 		*(.rodata*)
 	} : text
 
-    .init_array : AT (ADDR (.init_array) - 0xC0000000)
+    .init_array : AT (ADDR (.init_array) - KERNEL_BEGIN)
     {
         PROVIDE (CTORS_BEGIN = .);
         KEEP (*(.init_array .ctors))
         PROVIDE (CTORS_END = .);
     } : data
 
-	.data ALIGN (4096) : AT(ADDR(.data) - 0xC0000000)
+	.data ALIGN (4096) : AT(ADDR(.data) - KERNEL_BEGIN)
 	{
 		*(.data)
 		*(.data.*)
 	} : data
 
-	.bss ALIGN (4096) : AT(ADDR(.bss) - 0xC0000000)
+	.bss ALIGN (4096) : AT(ADDR(.bss) - KERNEL_BEGIN)
 	{
 		*(COMMON*)
 		*(.bss*)
