--- a/source/kernel/SConscript
+++ b/source/kernel/SConscript
@@ -36,7 +36,7 @@ if kenv['TGTTYPE'] == 'x86':
 #		'ksymbols.cc,src/arch/i586/gdt.cc,src/basic/arch/$TGT/profile.c'
 #)
 
-src = [kenv.Glob('src/arch/$TGT/kernel.S')]
+src = [kenv.Glob('src/arch/$TGT/kernel.S'), kenv.Glob('src/arch/$TGTTYPE/kernel.S')]
 src += [kenv.Glob('src/*.c'), kenv.Glob('src/*/*.c')]
 src += [f for f in kenv.Glob('src/*.cc') if 'start.cc' not in str(f)]
 src += [kenv.Glob('src/*/*.cc')]
@@ -44,10 +44,11 @@ src += [f for f in kenv.Glob('src/*/*/*.c') if 'arch/' not in str(f)]
 src += [f for f in kenv.Glob('src/*/*/*.cc') if 'arch/' not in str(f)]
 src += [kenv.Glob('src/arch/$TGT/*.cc')]
 src += [kenv.Glob('src/arch/$TGT/*/*.cc'), kenv.Glob('src/arch/$TGT/*/*/*.cc')]
-src += [kenv.Glob('src/arch/$TGTTYPE/*.cc'), kenv.Glob('src/arch/$TGTTYPE/*.S')]
+src += [kenv.Glob('src/arch/$TGTTYPE/*.cc')]
 src += [kenv.Glob('src/arch/$TGTTYPE/*/*.cc'), kenv.Glob('src/arch/$TGTTYPE/*/*/*.cc')]
 src += [kenv.Glob('src/basic/arch/$TGT/*.c'), kenv.Glob('src/basic/arch/$TGTTYPE/*.c')]
 src += [kenv.Glob('src/basic/arch/$TGT/*.S')]
+src += [f for f in kenv.Glob('src/arch/$TGTTYPE/*.S') if 'kernel.S' not in str(f)]
 src += [f for f in kenv.Glob('src/arch/$TGT/*.S') if 'kernel.S' not in str(f)]
 src += [kenv.Glob('src/arch/$TGT/*/*.S'), kenv.Glob('src/arch/$TGTTYPE/*/*.S')]
 tsrc = [
