--- a/source/kernel/src/arch/x86/ld.conf
+++ b/source/kernel/src/arch/x86/ld.conf
@@ -1,5 +1,10 @@
-#include <sys/arch/i586/mem/layout.h>
+#if defined(__i586__)
+#	include <sys/arch/i586/mem/layout.h>
 OUTPUT_FORMAT("elf32-i386")
+#else
+#	include <sys/arch/x86_64/mem/layout.h>
+OUTPUT_FORMAT("elf64-x86-64")
+#endif
 
 ENTRY(bspEntry)
 
