--- a/source/lib/SConscript
+++ b/source/lib/SConscript
@@ -2,8 +2,19 @@
 
 Import('env')
 
+def isIgnored(list, name):
+	for i in list:
+		if "/" + i + "/" in name:
+			return True
+	return False
+
 if env['TGT'] == 'eco32' or env['TGT'] == 'mmix':
 	env.SConscript([f for f in env.Glob('*/SConscript')
 					if 'basic' not in str(f) and 'gui' not in str(f) and 'vbe' not in str(f)], 'env')
+elif env['TGT'] == 'x86_64':
+	exclude = ['vbe','vbetext']
+	for d in env.Glob('*/SConscript'):
+		if not isIgnored(exclude, str(d)):
+			env.SConscript(d, 'env')
 else:
 	env.SConscript([f for f in env.Glob('*/SConscript') if 'basic' not in str(f)], 'env')
