Consolidated a lot of the boot-code.

--- a/source/kernel/src/arch/mmix/ld.conf
+++ b/source/kernel/src/arch/mmix/ld.conf
@@ -12,13 +12,14 @@ PHDRS
 SECTIONS
 {
 	. = 0x8000000000000000;
-	
+
 	.text : AT(ADDR(.text) - 0x8000000000000000)
 	{
+		_btext = .;
 		*(.text*)
 		*(.gnu.linkonce.t.*)
 	} : text
-	
+
 	.rodata : AT(ADDR(.rodata) - 0x8000000000000000)
 	{
 		*(.rodata*)
@@ -31,7 +32,7 @@ SECTIONS
         KEEP (*(.init_array .ctors))
         PROVIDE (CTORS_END = .);
     } : data
-	
+
 	.data ALIGN (4096) : AT(ADDR(.data) - 0x8000000000000000)
 	{
 		*(.data)
@@ -44,8 +45,9 @@ SECTIONS
 		*(COMMON*)
 		*(.bss*)
 		*(.gnu.linkonce.b.*)
+		_ebss = .;
 	} : bss
-	
+
 	.MMIX.reg_contents :
 	{
 		/* Note that this section always has a fixed VMA - that of its first register * 8.  */
