--- a/source/kernel/src/arch/eco32/ld.conf
+++ b/source/kernel/src/arch/eco32/ld.conf
@@ -11,12 +11,13 @@ PHDRS
 SECTIONS
 {
 	. = 0xC0000000;
-	
+
 	.text : AT(ADDR(.text) - 0xC0000000)
 	{
+		_btext = .;
 		*(.text*)
 	} : text
-	
+
 	.rodata : AT(ADDR(.rodata) - 0xC0000000)
 	{
 		*(.rodata*)
@@ -28,7 +29,7 @@ SECTIONS
         KEEP (*(.init_array .ctors))
         PROVIDE (CTORS_END = .);
     } : data
-	
+
 	.data ALIGN (4096) : AT(ADDR(.data) - 0xC0000000)
 	{
 		*(.data)
