Moved loading of boot modules into userspace.
This enables us to remove a lot of code from the kernel. The
primitives to do that in userspace are available there anyway.
Additionally, each boot module is made available at
/system/boot/<filename>, that is not by number anymore but
by the basename of the file to load.

--- a/source/user/initloader/SConscript
+++ b/source/user/initloader/SConscript
@@ -1,10 +1,11 @@
 # -*- Mode: Python -*-
 
 Import('env')
-
 myenv = env.Clone()
 myenv.Append(LINKFLAGS = ' -nostartfiles')
-prog = myenv.EscapeCProg(
-	'bin', target = 'initloader', source = myenv.Glob('$TGT/*.S'),
-	force_static = True, var_addr = False
+myenv.EscapeCProg(
+	'bin',
+	target = 'initloader',
+	source = [myenv.Glob('$TGT/*.S'), myenv.Glob('$TGTTYPE/*.S'), myenv.Glob('*.c')],
+	force_static = True
 )
