--- a/source/drivers/SConscript
+++ b/source/drivers/SConscript
@@ -3,3 +3,4 @@
 Import('env')
 env.SConscript('common/SConscript', 'env')
 env.SConscript('$TGTTYPE/SConscript', 'env')
+env.SConscript('$TGT/SConscript', 'env')
