Changed vesa/vga to use x86emu instead of vm86-mode.
That is, I moved vga and vesa into one application and added the
x86emu library plus some support code. This enables us to use
vesa on x86_64.

--- a/source/drivers/common/uimng/SConscript
+++ b/source/drivers/common/uimng/SConscript
@@ -2,7 +2,7 @@
 
 Import('env')
 
-if env['TGT'] == 'i586':
-	env.EscapeCXXProg('sbin', target = 'uimng', source = env.Glob('*.cc'), LIBS = ['info', 'vbetext'])
+if env['TGTTYPE'] == 'x86':
+	env.EscapeCXXProg('sbin', target = 'uimng', source = env.Glob('*.cc'), LIBS = ['info', 'vbe'])
 else:
 	env.EscapeCXXProg('sbin', target = 'uimng', source = env.Glob('*.cc'), LIBS = ['info'])
