--- a/source/user/dynlink/SConscript
+++ b/source/user/dynlink/SConscript
@@ -4,10 +4,20 @@ Import('env')
 
 if env['TGTTYPE'] == 'x86':
 	myenv = env.Clone()
-	myenv.Append(LINKFLAGS = ' -nostartfiles -Wl,-T,user/dynlink/ld.conf')
-	#myenv.Append(CFLAGS = ' -DCALLTRACE_PID=6', ASFLAGS = ' -DCALLTRACE_PID=6')
+
+	preproc = Builder(action = '$CROSSDIR/bin/$CROSS-cpp -P $CPPFLAGS $SOURCE $TARGET')
+	myenv.Append(BUILDERS = {'PreProc' : preproc})
+
+	ldconf = myenv.PreProc('ld-final.conf', 'ld.conf')
+
+	myenv.Append(
+		LINKFLAGS = ' -nostartfiles -Wl,-T,' + ldconf[0].abspath
+	)
+	#myenv.Append(CFLAGS = ' -DCALLTRACE_PID=0', ASFLAGS = ' -DCALLTRACE_PID=0')
 	prog = myenv.EscapeCProg(
-		'bin', target = 'dynlink', source = ['startup.S', myenv.Glob('*.c')],
+		'bin',
+		target = 'dynlink',
+		source = ['startup.S', myenv.Glob('arch/$TGT/lookup.S'), myenv.Glob('*.c')],
 		force_static = True, var_addr = False
 	)
-	myenv.Depends(prog, 'ld.conf')
+	myenv.Depends(prog, ldconf)
