--- a/source/user/dynlink/ld.conf
+++ b/source/user/dynlink/ld.conf
@@ -1,14 +1,21 @@
+#if defined(__i586__)
+#	define START_ADDR 0xA0000000
 OUTPUT_FORMAT("elf32-i386")
+#else
+#	define START_ADDR 0x70000000
+OUTPUT_FORMAT("elf64-x86-64")
+#endif
+
 ENTRY(_start)
 
 SECTIONS
 {
-	.text 0xA0000000 :
+	.text START_ADDR :
 	{
 		*(.text)
 		*(.rodata*)
 	}
-	
+
 	.data ALIGN (4096) :
 	{
 		*(.data)
