--- a/source/SConstruct
+++ b/source/SConstruct
@@ -23,10 +23,10 @@ hostenv = Environment(
 )
 env = Environment(
 	CPPFLAGS = ' -D__' + target + '__ -D__' + tgttype + '__',
-	CFLAGS = '-Wall -std=c99 -Wextra -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings'
+	CFLAGS = '-Wall -std=c99 -Wextra -Wpointer-arith -Wcast-align -Wwrite-strings'
 			+ ' -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Winline'
 			+ ' -Wno-long-long -Wstrict-prototypes -fms-extensions',
-	CXXFLAGS = '-Wall -ansi -std=c++0x -Wextra -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings'
+	CXXFLAGS = '-Wall -ansi -std=c++0x -Wextra -Wpointer-arith -Wcast-align -Wwrite-strings'
 			+ ' -Wmissing-declarations -Wno-long-long',
 	ASFLAGS = '-Wa,--warn -DIN_ASM',
 	ENV = {'PATH' : crossdir + "/bin:" + os.environ['PATH']},
