Moved rectangle-algos to gui/graphics/rectangle.
They shouldn't be in the C library and the C++ version is *much*
simpler to use.

--- a/source/lib/SConscript
+++ b/source/lib/SConscript
@@ -10,6 +10,6 @@ def isIgnored(list, name):
 
 if env['TGT'] == 'eco32' or env['TGT'] == 'mmix':
 	env.SConscript([f for f in env.Glob('*/SConscript')
-					if 'basic' not in str(f) and 'gui' not in str(f) and 'vbe' not in str(f)], 'env')
+					if 'basic' not in str(f) and 'vbe' not in str(f)], 'env')
 else:
 	env.SConscript([f for f in env.Glob('*/SConscript') if 'basic' not in str(f)], 'env')
