--- a/source/user/libguitest/SConscript
+++ b/source/user/libguitest/SConscript
@@ -1,4 +1,6 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'libguitest', source = [env.Glob('*.cpp'), env.Glob('*/*.cpp')])
+env.EscapeCXXProg(
+	'bin', target = 'libguitest', source = [env.Glob('*.cpp'), env.Glob('*/*.cpp')], LIBS = ['gui']
+)
