--- a/source/user/mv/SConscript
+++ b/source/user/mv/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'mv', source = env.Glob('*.cc'), LIBS = ['cp'])
+env.EscapeCXXProg('bin', target = 'mv', source = env.Glob('*.cc'))
