--- a/source/user/chown/SConscript
+++ b/source/user/chown/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('bin', target = 'chown', source = env.Glob('*.c'))
+env.EscapeCProg('bin', target = 'chown', source = env.Glob('*.c'), LIBS = ['usergroup'])
