--- a/source/SConstruct
+++ b/source/SConstruct
@@ -86,6 +86,10 @@ elif target == 'x86_64':
 		LINKFLAGS = ' -Wl,-z,max-page-size=0x1000'
 	)
 
+env.Append(
+	LINKFLAGS = ' -Wl,-rpath-link,' + Dir(builddir + '/bin').abspath
+)
+
 verbose = os.environ.get('ESC_VERBOSE',0)
 if int(verbose) == 0:
 	hostenv['ASCOMSTR'] = env['ASCOMSTR'] = "AS $TARGET"
