Moved image-stuff into separate library.
That is, now we have an image-library that should, later,
support all kinds of image formats. This is used in the GUI
library and also in the video driver to prevent code
duplication.

--- a/source/lib/gui/SConscript
+++ b/source/lib/gui/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeLib(target = 'gui', source = [env.Glob('*.cpp'), env.Glob('*/*.cpp')])
+env.EscapeLib(target = 'gui', source = [env.Glob('*.cpp'), env.Glob('*/*.cpp')], LIBS = ['img'])
