--- a/source/user/glogin/SConscript
+++ b/source/user/glogin/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'bin', target = 'glogin', source = env.Glob('*.cpp'), LIBS = ['gui', 'img', 'usergroup']
+	'bin', target = 'glogin', source = env.Glob('*.cpp'), LIBS = ['gui', 'usergroup']
 )
