--- a/source/user/gsettings/SConscript
+++ b/source/user/gsettings/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'bin', target = 'gsettings', source = env.Glob('*.cpp'), LIBS = ['gui', 'img']
+	'bin', target = 'gsettings', source = env.Glob('*.cpp'), LIBS = ['gui']
 )
