Added support for simple PNG images.

--- a/source/lib/img/SConscript
+++ b/source/lib/img/SConscript
@@ -1,4 +1,5 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeLib(target = 'img', source = env.Glob('*.cpp'))
+env.EscapeLib(target = 'img', source = env.Glob('*.cpp'), LIBS = ['z'])
+env.Append(LIBDEPS = {'img': ['z']})
