--- a/source/bootloader/ecommix/stage2/arch/eco32/ld.conf
+++ b/source/bootloader/ecommix/stage2/arch/eco32/ld.conf
@@ -4,10 +4,10 @@ ENTRY(reset)
 SECTIONS
 {
 	. = 0xC0400000;
-	
+
 	.text : AT(ADDR(.text) - 0xC0400000)
 	{
-		*(.text)
+		*(.text*)
 		*(.data)
 		*(.rodata*)
 		*(COMMON*)
