--- a/source/bootloader/ecommix/stage2/arch/mmix/ld.conf
+++ b/source/bootloader/ecommix/stage2/arch/mmix/ld.conf
@@ -4,10 +4,10 @@ ENTRY(start)
 SECTIONS
 {
 	. = 0x8000000000400000;
-	
+
 	.text : AT( ADDR(.text) - 0x8000000000400000 )
 	{
-		*(.text)
+		*(.text*)
 		*(.text.unlikely)
 		*(.data)
 		*(.rodata*)
@@ -15,7 +15,7 @@ SECTIONS
 		*(.bss*)
 		_ebss = .;
 	}
-	
+
 	.MMIX.reg_contents :
 	{
 		/* Note that this section always has a fixed VMA - that of its first register * 8.  */
