--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /source/build
+/source/log.txt
 /gimmix/build
 /gimmix/org/build
 /eco32/build
@@ -8,15 +9,17 @@
 /eco32/simtest
 /eco32/monitor
 /eco32/stdalone
-/source/log.txt
+/eco32/sim/sim
+/eco32/sim/getline/libgetline.a
+/eco32/sim/getline/testgl
 /cross/*/src
 /cross/*/build
-/source/.*project
-/source/.*settings
-/eco32/.*project
-/gimmix/.*project
+/cross/*.gz
+/cross/*.bz2
 *.o
 *.bin
 *.mak
 *.exo
 *.pyc
+.sconsign.dblite
+*.sublime-workspace
