--- a/source/lib/esc/SConscript
+++ b/source/lib/esc/SConscript
@@ -7,7 +7,7 @@ builddir = Dir('regex')
 myenv.Append(
 	CFLAGS = ' -DYYERROR_VERBOSE -I lib/esc/regex -I ' + builddir.abspath,
 	LEXFLAGS = '--nounistd',
-	YACCFLAGS = '-t -d'
+	YACCFLAGS = '-t -d -v'
 )
 
 lexer = myenv.CFile(target = 'regex/pattern-lex.c', source = 'regex/pattern.l')
