--- a/source/user/grep/SConscript
+++ b/source/user/grep/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('bin', target = 'grep', source = env.Glob('*.c'))
+env.EscapeCXXProg('bin', target = 'grep', source = env.Glob('*.cc'))
