--- a/source/bootloader/x86_64/SConscript
+++ b/source/bootloader/x86_64/SConscript
@@ -13,9 +13,7 @@ for bin in ['escape','initloader','ata','pci','ext2']:
 	myenv.Depends(loader, '$DUMPDIR/' + bin + '.dump')
 
 prog = myenv.EscapeCXXProg(
-	'boot', 'bootloader.tmp', ['start.S', loader, 'serial.cc'],
+	'boot', 'bootloader', ['start.S', loader, 'serial.cc'],
 	force_static = True, var_addr = False,
 	LIBS = ['c']
 )
-myenv.EscapeStrip(target = 'bootloader', source = prog)
-myenv.Install('$BINDIR', 'bootloader')
