kernel: introduced a arch-independent mem/layout.h.

--- a/source/kernel/src/arch/x86/ld.conf
+++ b/source/kernel/src/arch/x86/ld.conf
@@ -1,8 +1,7 @@
+#include <mem/layout.h>
 #if defined(__i586__)
-#	include <arch/i586/mem/layout.h>
 OUTPUT_FORMAT("elf32-i386")
 #else
-#	include <arch/x86_64/mem/layout.h>
 OUTPUT_FORMAT("elf64-x86-64")
 #endif
 
